--- a/src/scss/partials/_forms.scss
+++ b/src/scss/partials/_forms.scss
@@ -110,7 +110,7 @@ label {
 
 			.icon {
 				vertical-align: top;
-				margin-top: ($input-btn-height-touch - 28px) * 0.5;
+				margin-top: ($input-btn-height-touch - 28px);
 			}
 		}
 	}
